# Tessellation

./: .gitignore  .gitmodules  CMakeLists.txt  dragon-uv.off
Models/: beast-cones.selection.txt  beast-simplified-10-hd.txt  beast-simplified-10-seams.txt  beast-simplified-10-vd.txt  beast-simplified-10.selection.txt  beast-uv-simplified.off  beast-uv.off  beast.selection.txt  beastcopy-uv-simplified.off  beastcopy-uv.off  beastcopy.selection.txt  beastcorrected.selection.txt  bunny.selections.txt  cube-simple-uv.off  cube-simple.selection.txt  cube-uv-simplified.off  cube-uv.off  cube.selection.txt  dragon-mapped.ply  dragon-mapped.selection.txt  dragon.selections.txt  lucy-uv.off  lucy.selections.txt  sphere.selection.txt
Models/beast/: simple.obj.old
Shaders/: basic_tessellation.tesc  basic_tessellation.tese  default_frag.glsl  default_vertex.glsl  tess_frag.glsl  tess_vertex.glsl
Shaders/dynamic/: tess_control.tesc  tess_evaluation.tese  tess_frag.glsl  tess_vertex.glsl
Shaders/standard/: tess_evaluation.tese
Shaders/test/: tess_control.tesc  tess_evaluation.tese  tess_frag.glsl
Source/: Camera.h  Debug.h  Decimator.cpp  Decimator.h  Evaluation.cpp  Evaluation.h  GlobalParameterization.cpp  GlobalParameterization.h  IO.cpp  IO.h  Log.cpp  Log.h  Mapping.cpp  Mapping.h  Mesh.cpp  Mesh.h  MeshImpl.h  MeshProcessor.cpp  MeshProcessor.h  Model.cpp  Model.h  MultiResStorage.cpp  MultiResStorage.h  OGLMesh.cpp  OGLMesh.h  OMesh.cpp  OMesh.h  Prepare.cpp  Prepare.h  Primitives.cpp  Primitives.h  Shader.h  Simplify.h  Strategy.cpp  Strategy.h  Tessellator.cpp  Tessellator.h  Utils.cpp  Utils.h  main.cpp
Source/FastDecimator/: Heap.h  Mesh.cpp  Mesh.h  Types.h
data/beast/: MapOrigtoSimple.txt  edge.selection.txt  mapping.bin.old  simple.obj.old
